<resources>
    <!-- Навбар -->
    <string name="app_name">Pocket Job</string>
    <string name="main_page">Главная</string>
    <string name="favorites">Избранное</string>
    <!-- Заголовки экранов -->
    <string name="team">Команда</string>
    <string name="job_search">Поиск вакансий</string>
    <string name="filters">Настройки фильтрации</string>
    <string name="job_place">Выбор места работы</string>
    <string name="choose_country">Выбор страны</string>
    <string name="choose_region">Выбор региона</string>
    <string name="industry_filter">Выбор отрасли</string>
    <string name="job">Вакансия</string>
    <!-- Экран команды -->
    <string name="team_subtitle">Над приложением работали</string>
    <string name="member1">Елена Завадская</string>
    <string name="member2">Анастасия Маругина</string>
    <string name="member3">Андрей Тимофеев</string>
    <string name="member4">Анастасия Сорокина</string>
    <string name="member5">Ксения Ковалева</string>
    <string name="member6">Наталья Нестерова</string>
    <!-- Экран поиска -->
    <string name="type_in_query">Введите запрос</string>
    <string name="vacancy_name">Название вакансии</string>
    <string name="vacancy_employer">Компания</string>
    <string name="vacancy_salary">Зарплата не указана</string>
    <!-- Ошибки -->
    <string name="failed_to_get_vacancies_list">Не удалось получить список вакансий</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="no_internet">Нет интернета</string>
    <string name="unknown_error">Произошла неизвестная ошибка</string>
    <string name="toast_error">Произошла ошибка</string>
    <string name="toast_no_internet">Проверьте подключение к интернету</string>
    <string name="failed_to_get_list">Не удалось получить список</string>
    <string name="no_region">Такого региона нет</string>
    <!-- Сообщения -->
    <string name="list_is_empty">Список пуст</string>
    <string name="no_results">Таких вакансий нет</string>
    <string name="vacancy_not_found">Вакансия не найдена или удалена</string>
    <!-- Экран вакансии -->
    <string name="experience">Требуемый опыт</string>
    <string name="description">Описание вакансии</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="share_vacancy">Поделиться вакансией</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="reset">Сбросить</string>
    <string name="apply">Применить</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="dont_show_without_salary">Не показывать без зарплаты</string>
    <!-- Экран выбора региона -->
    <string name="region">Регион</string>
    <string name="country">Страна</string>
    <string name="select">Выбрать</string>
    <string name="type_in_region">Введите регион</string>
    <!-- Экран отрасли -->
    <string name="enter_industry">Введите отрасль</string>
    <string name="no_industries">Такой отрасли нет</string>
    <string name="countries_not_found">Не удалось загрузить список стран</string>

    <plurals name="vacancy_count">
        <item quantity="one">вакансия</item>
        <item quantity="few">вакансии</item>
        <item quantity="many">вакансий</item>
        <item quantity="other">вакансий</item>
    </plurals>
</resources>
