<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TeamFragment"
    style="@style/linear_layout">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/searchToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navbar_height"
        android:background="?attr/background"
        android:paddingVertical="16dp"
        app:contentInsetStart="0dp"
        app:title="@string/team"
        app:titleMarginStart="0dp"
        app:titleTextAppearance="@style/title_text_style"
        app:titleTextColor="?attr/colorOnBackground" />

    <TextView
        android:text="@string/team_subtitle"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        style="@style/bold_text_style"/>

    <TextView
        android:text="@string/member1"
        style="@style/team_member_text_style"/>

    <TextView
        android:text="@string/member2"
        style="@style/team_member_text_style"/>

    <TextView
        android:text="@string/member3"
        style="@style/team_member_text_style"/>

    <TextView
        android:text="@string/member4"
        style="@style/team_member_text_style"/>

    <TextView
        android:text="@string/member5"
        style="@style/team_member_text_style"/>

    <TextView
        android:text="@string/member6"
        style="@style/team_member_text_style"/>
</LinearLayout>
