<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favourites.FavouritesFragment"
    style="@style/linear_layout">

    <TextView
        android:layout_height="@dimen/navbar_height"
        android:text="@string/favorites"
        android:gravity="center_vertical"
        style="@style/title_text_style" />

    <TextView
        android:id="@+id/tv_failed_to_get_vacancies_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:layout_marginTop="158dp"
        android:text="@string/failed_to_get_vacancies_list"
        style="@style/title_text_style"
        app:drawableTopCompat="@drawable/cat_with_food"
        android:drawablePadding="16dp" />

    <TextView
        android:id="@+id/tv_list_is_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:layout_marginTop="170dp"
        android:text="@string/list_is_empty"
        style="@style/title_text_style"
        app:drawableTopCompat="@drawable/list_is_empty"
        android:drawablePadding="16dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_result_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="16dp"
        android:visibility="visible"/>

</LinearLayout>
