<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/job_filter_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.filters.JobPlaceFilterFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/jobPlaceFilterToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navbar_height"
        android:background="?attr/background"
        android:elevation="0dp"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/job_place"
        app:titleTextAppearance="@style/title_text_style"
        app:titleTextColor="?attr/colorOnBackground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/countryTextInputLayout"
        style="@style/text_input_no_input_style"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60"
        android:hint="@string/country"
        android:textColorHint="@color/yp_gray"
        app:endIconDrawable="@drawable/ic_arrow_forward"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/countryTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none"
            android:textAppearance="@style/text_style"
            android:textColor="?attr/colorOnBackground" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regionTextInputLayout"
        style="@style/text_input_no_input_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60"
        android:hint="@string/region"
        android:textColorHint="@color/yp_gray"
        app:endIconDrawable="@drawable/ic_arrow_forward"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regionTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none"
            android:textAppearance="@style/text_style"
            android:textColor="?attr/colorOnBackground" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/selectFiltersButton"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_24"
        android:text="@string/select"
        android:visibility="gone" />

</LinearLayout>
